[package]
name = "frostgate-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frostgate-sdk = { path = "../frostgate-sdk" }
sp1-zkvm = { workspace = true }
uuid = { workspace = true }
async-trait.workspace = true
ethers.workspace = true
tokio.workspace = true
solana-client.workspace = true
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.1"
log = "0.4.27"
thiserror.workspace = true
